@@ -35,7 +35,7 @@ class StompCallbackLocaleTest {
     @BeforeEach
     void saveAndSetTurkishLocale() {
         savedLocale = Locale.getDefault();
-        Locale.setDefault(new Locale("tr", "TR"));
+        Locale.setDefault(Locale.of("tr", "TR"));
     }
 
     @AfterEach
