@@ -40,7 +40,7 @@ class JsoupTextExtractorLocaleTest {
     @BeforeEach
     void saveAndSetTurkishLocale() {
         savedLocale = Locale.getDefault();
-        Locale.setDefault(new Locale("tr", "TR"));
+        Locale.setDefault(Locale.of("tr", "TR"));
     }
 
     @AfterEach
